@@ -1,7 +1,7 @@
 ;;; nethack.el -- run Nethack as an inferior process in Emacs
 ;;; Author: Ryan Yeske (rcyeske@vcn.bc.ca)
 ;;; Date: Sat Mar 18 11:31:52 2000
-;;; $Id: nethack.el,v 1.49 2001/12/20 11:28:53 sabetts Exp $
+;;; $Id: nethack.el,v 1.50 2001/12/21 03:17:14 sabetts Exp $
 ;;; Requires: a copy of Nethack 3.3.x with the lisp window port
 
 ;;; Commentary:
@@ -218,6 +218,10 @@ The variable `nethack-program' is the name of the executable to run."
 	(nethack-restore-window-configuration)
 	(message "Nethack process already running..."))
     (save-excursion
+      ;; Reset intermediate variables.
+      (setq nethack-status-alist nil)
+      (setq nethack-menu nil)
+      ;; Start the process.
       (pop-to-buffer "*nh*")
       (erase-buffer)
       (apply 'make-comint "nh" nethack-program nil nethack-program-args)
@@ -225,8 +229,8 @@ The variable `nethack-program' is the name of the executable to run."
       (setq nh-comint-proc (get-buffer-process (current-buffer)))
       (set-process-filter nh-comint-proc 'nh-filter)
       (set-process-sentinel nh-comint-proc 'nh-sentinel)
-      (make-variable-buffer-local 'nethack-buffer-type)	; FIXME: obsolete?
-      (setq nethack-menu nil))))
+      (make-variable-buffer-local 'nethack-buffer-type)))) ; FIXME: obsolete?
+
 
 ;;;; Process code to communicate with the Nethack executable
 (define-derived-mode nh-comint-mode comint-mode "Nethack Process"
